# Travail_esclave_PoC_Hackathon

./: .gitignore  LICENSE  app.py  main.py  pyproject.toml  requirements.txt
modules/: __init__.py  alarm.py  config.py  enforcer.py  gaze_tracker.py  overlay.py  phone_detector.py  pinch_detector.py  volume.py
