[project]
name = "productivity-enforcer"
version = "1.0.0"
description = "Extreme Productivity Enforcer - Webcam monitoring with alarm system"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.0.0",
    "mediapipe>=0.10.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "pygame>=2.5.0",
    "customtkinter>=5.2.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]
